[project]
name = "pyrated"
version = "1.3.1"
description = "The Python ratelimit daemon"
authors = [
    {name = "Romuald Brunet", email = "romuald@chivil.com"},
]
dependencies = ["setuptools>=74.1.0"]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
cache-keys = [{file = "src/*.c"}]


[tool.setuptools]
ext-modules = [
    {name = "pyrated._ratelimit", sources = ["src/pyrated/_ratelimit.c"]}
]

[tool.setuptools.exclude-package-data]
"*" = ["*.c"]  # exclude from wheel

[project.scripts]
pyrated = "pyrated.server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
